[tool.poetry]
name = "tsp100-print"
version = "0.1.0"
description = "Send images to the Star Micronics TSP100 receipt printer"
authors = ["Dalpil"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
Pillow = "^11.0.0"

[tool.poetry.scripts]
tsp100-print = 'tsp100_print.main:print_image'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
